--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
 			"name": "(lldb) Lancer",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "/Users/vbaron/Desktop/Mini_shared/minishell",
-			"args": [],
+			"program": "/Users/vbaron/Desktop/Mini_shared/interpreter/my_interpreter",
+			"args": ["5 + 5"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
 			"environment": [],
