--- a/lib/Makefile
+++ b/lib/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: cramdani <cramdani@student.42.fr>          +#+  +:+       +#+         #
+#    By: vbaron <vbaron@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/06/13 13:33:21 by cramdani          #+#    #+#              #
-#    Updated: 2021/09/09 12:52:51 by cramdani         ###   ########.fr        #
+#    Updated: 2021/10/18 11:54:40 by vbaron           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
