--- a/lib/Makefile
+++ b/lib/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: vbaron <vbaron@student.42.fr>              +#+  +:+       +#+         #
+#    By: cramdani <cramdani@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/06/13 13:33:21 by cramdani          #+#    #+#              #
-#    Updated: 2021/10/18 11:54:40 by vbaron           ###   ########.fr        #
+#    Updated: 2021/11/04 21:14:48 by cramdani         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,10 +16,10 @@ END		=	\033[m
 
 NAME 	=	lib.a
 
-CC		=	gcc
+CC		=	clang
 CFLAGS	=	-Wall -Wextra -Werror -g3
 
-LIBFT_P	= libft
+LIBFT_P	=	libft
 
 LIB		= $(LIBFT_P)/libft.a 
 
